RESOLVED FIXED177128
[Curl] Fix r222147
https://bugs.webkit.org/show_bug.cgi?id=177128
Summary [Curl] Fix r222147
Daewoong Jang
Reported 2017-09-19 02:11:02 PDT
-Fix can't load https pages. -Build fix for platforms other than Windows. -Replace OS(WINDOWS) with PLATFORM(WIN). -Some style fix.
Attachments
patch (3.45 KB, patch)
2017-09-19 02:13 PDT, Daewoong Jang
no flags
Daewoong Jang
Comment 1 2017-09-19 02:13:51 PDT
Basuke Suzuki
Comment 2 2017-09-19 13:07:40 PDT
Comment on attachment 321189 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=321189&action=review > Source/WebCore/platform/network/curl/CurlSSLVerifier.cpp:56 > + if (!verifier) Oh my. Sorry about this.
Don Olmstead
Comment 3 2017-09-19 13:08:40 PDT
Comment on attachment 321189 [details] patch I don't see how changing to PLATFORM(WIN) solves anything here.
Basuke Suzuki
Comment 4 2017-09-19 13:30:19 PDT
(In reply to Don Olmstead from comment #3) > Comment on attachment 321189 [details] > patch > > I don't see how changing to PLATFORM(WIN) solves anything here. I guess that for Qt on Windows?
Don Olmstead
Comment 5 2017-09-19 14:04:36 PDT
(In reply to Basuke Suzuki from comment #4) > (In reply to Don Olmstead from comment #3) > > Comment on attachment 321189 [details] > > patch > > > > I don't see how changing to PLATFORM(WIN) solves anything here. > > I guess that for Qt on Windows? Believe this is for his Android port. I'm just not sure wanted to know why it would be a problem as android shouldn't be OS(WINDOWS) in this case.
Daewoong Jang
Comment 6 2017-09-19 15:52:13 PDT
(In reply to Don Olmstead from comment #5) > (In reply to Basuke Suzuki from comment #4) > > (In reply to Don Olmstead from comment #3) > > > Comment on attachment 321189 [details] > > > patch > > > > > > I don't see how changing to PLATFORM(WIN) solves anything here. > > > > I guess that for Qt on Windows? > > Believe this is for his Android port. I'm just not sure wanted to know why > it would be a problem as android shouldn't be OS(WINDOWS) in this case. I'd have kept these changes downstream if it only affects Android port. I submitted it because the guarded code shouldn't be OS dependent.
Alex Christensen
Comment 7 2017-09-19 17:52:30 PDT
Comment on attachment 321189 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=321189&action=review I don't understand the need for this patch. > Source/WebCore/ChangeLog:3 > + [Curl] Fix r222147 What exactly does this fix? Does it fix the build? Does it fix https on Windows? Does it fix https on non-windows? Does it fix bypassing certificate warnings on certain systems?
Daewoong Jang
Comment 8 2017-09-19 18:10:47 PDT
(In reply to Alex Christensen from comment #7) > Comment on attachment 321189 [details] > patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=321189&action=review > > I don't understand the need for this patch. > > > Source/WebCore/ChangeLog:3 > > + [Curl] Fix r222147 > > What exactly does this fix? Does it fix the build? Does it fix https on > Windows? Does it fix https on non-windows? Does it fix bypassing > certificate warnings on certain systems? Does it fix the build? >> Yes. It fixes building curl without OS(WINDOWS). Does it fix https on Windows? Does it fix https on non-windows? >> Yes. https://bugs.webkit.org/show_bug.cgi?id=177128#c2 Does it fix bypassing certificate warnings on certain systems? >> I don't know. The problem is not loading https pages at all, not bypassing certificate warnings. I'm sure this is needed.
Daewoong Jang
Comment 9 2017-09-19 18:34:45 PDT
(In reply to Alex Christensen from comment #7) > Comment on attachment 321189 [details] > patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=321189&action=review > > I don't understand the need for this patch. > > > Source/WebCore/ChangeLog:3 > > + [Curl] Fix r222147 > > What exactly does this fix? Does it fix the build? Does it fix https on > Windows? Does it fix https on non-windows? Does it fix bypassing > certificate warnings on certain systems? Thanks for your review and giving a cq+ but you set r? instead of r+. Is this a mistake or should I have to ask another reviewer to give a r+? Thank you.
Alex Christensen
Comment 10 2017-09-19 20:56:19 PDT
Comment on attachment 321189 [details] patch mistake. r=me
WebKit Commit Bot
Comment 11 2017-09-19 21:25:56 PDT
Comment on attachment 321189 [details] patch Clearing flags on attachment: 321189 Committed r222248: <http://trac.webkit.org/changeset/222248>
WebKit Commit Bot
Comment 12 2017-09-19 21:25:57 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 13 2017-09-27 12:28:24 PDT
Note You need to log in before you can comment on or make changes to this bug.