[Curl] Fix r222147 https://bugs.webkit.org/show_bug.cgi?id=177128

Patch by Daewoong Jang <daewoong.jang@naverlabs.com> on 2017-09-19
Reviewed by Alex Christensen.

* platform/network/curl/CurlSSLHandle.h:
* platform/network/curl/CurlSSLVerifier.cpp:
(WebCore::CurlSSLVerifier::certVerifyCallback):
* platform/network/curl/CurlSSLVerifier.h:

Canonical link: https://commits.webkit.org/193563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222248 268f45cc-cd09-0410-ab3c-d52691b4dbfc